fix(theme): make primary contrast with background in dark_gray

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -190,7 +190,7 @@
 
         --popover: var(--gray-dark-20);
 
-        --primary: var(--gray-dark-15);
+        --primary: var(--gray-light-30);
         --secondary: var(--gray-dark-20);
 
         --background: var(--gray-dark-15);
